# make_feed

./: .env.example  README.md  example_feed.xml  examples.py  main.py  pyproject.toml  serve_rss.py  update_feed.sh
make_feed/: __init__.py  config.py  generate_rss.py  pull_notion.py
