[project]
name = "make_feed"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "feedgen>=1.0.0",
    "feedparser>=6.0.11",
    "mypy>=1.16.1",
    "notion-client>=2.4.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "ruff>=0.12.1",
]

[project.scripts]
make-feed = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 90
fix = true
target-version = "py312"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "COM812", # missing-trailing-comma
    "D100",   # undocumented-public-module
    "CPY001", # missing-copyright-notice
]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-nested-blocks = 4

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.mypy]
pretty = true
strict = true
